--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.0.0</version>
+        <version>2.6.14</version>
         <relativePath/>
     </parent>
 
@@ -30,8 +30,9 @@
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <eclipse.collection.version>11.1.0</eclipse.collection.version>
-        <spring.boot.version>3.0.0</spring.boot.version>
+        <spring.boot.version>2.6.14</spring.boot.version>
         <eclipse.collections.version>11.1.0</eclipse.collections.version>
+        <hibernate.version>5.6.14.Final</hibernate.version>
     </properties>
 
 
@@ -45,11 +46,26 @@
                 <scope>runtime</scope>
             </dependency>
 
+            <!--        h2    -->
+            <dependency>
+                <groupId>com.h2database</groupId>
+                <artifactId>h2</artifactId>
+                <version>${h2.version}</version>
+                <scope>test</scope>
+            </dependency>
+
+
             <!--  hibernate validator   -->
             <dependency>
                 <groupId>org.hibernate.validator</groupId>
                 <artifactId>hibernate-validator</artifactId>
-                <version>${hibernate-validator.version}</version>
+                <version>${hibernate.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.hibernate</groupId>
+                <artifactId>hibernate-core</artifactId>
+                <version>${hibernate.version}</version>
             </dependency>
 
             <!-- spring boot  -->
