--- a/pom.xml
+++ b/pom.xml
@@ -19,9 +19,8 @@
     </parent>
 
     <modules>
-
-
         <module>idea-debug</module>
+        <module>jdbc-jpa</module>
     </modules>
 
     <properties>
@@ -119,6 +118,13 @@
                 <artifactId>junit-jupiter-engine</artifactId>
                 <version>${junit-jupiter.version}</version>
                 <scope>test</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok</artifactId>
+                <version>${lombok.version}</version>
+                <scope>compile</scope>
             </dependency>
 
         </dependencies>
